<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/camilo"
    android:alpha="0.88"
    tools:context="gmsproduction.com.pushpush.Activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/mViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/mProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:padding="15dp"
            android:text="@string/profile"
            android:textSize="22sp"
            android:textColor="@color/textTabLight"
            />

        <TextView
            android:id="@+id/mUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:padding="15dp"
            android:text="@string/all_user"
            android:textSize="16sp"
            android:textColor="@color/textTabBright"
            />

        <TextView
            android:id="@+id/mNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:padding="15dp"
            android:text="@string/notifications"
            android:textSize="16sp"
            android:textColor="@color/textTabBright"
            />

    </LinearLayout>

</RelativeLayout>
