<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.88"
    android:background="@drawable/camilo"
    tools:context="gmsproduction.com.pushpush.Activity.RegisterActivity"
    >

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/textCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar2"
        android:layout_centerHorizontal="true"
        android:text="@string/Create_account"
        android:textColor="@color/textTabLight"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/SignUp_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textCreate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/camilo"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignUp_profile_image"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/SignUp_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/input_background"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/SignUp_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SignUp_Name"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_background"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/SignUp_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SignUp_Email"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_background"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp" />

            <Button
                android:id="@+id/SignUp_doSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SignUp_Password"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_background"
                android:backgroundTint="#99ffffff"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:text="@string/SignUp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"

                android:textSize="16sp" />

            <Button
                android:id="@+id/SignUp_backToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SignUp_doSignUp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_background"
                android:backgroundTint="#99ffffff"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:text="@string/backTo_log_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

    </ScrollView>




</RelativeLayout>
